# sorting_paper

./: CMakeLists.txt  README.md  benchmark_utils.c  benchmark_utils.h  csv_utils.c  csv_utils.h  main.c  print_utils.c  print_utils.h
algorithms/: README.md  bubble_sort.c  bubble_sort.h  counting_sort.c  counting_sort.h  insertion_sort.c  insertion_sort.h  merge_sort.c  merge_sort.h  quick_sort.c  quick_sort.h  radix_sort.c  radix_sort.h  selection_sort.c  selection_sort.h
results/: BubbleSort(QuickExit)_Ascending_0_30000.csv  BubbleSort(QuickExit)_Descending_0_30000.csv  BubbleSort(QuickExit)_Random(10%)_0_30000.csv  BubbleSort(QuickExit)_Random(Big)_0_30000.csv  BubbleSort(QuickExit)_Random(Small)_0_30000.csv  BubbleSort_Ascending_0_30000.csv  BubbleSort_Descending_0_30000.csv  BubbleSort_Random(10%)_0_30000.csv  BubbleSort_Random(Big)_0_30000.csv  BubbleSort_Random(Small)_0_30000.csv  CountingSort_Ascending_0_10000000.csv  CountingSort_Ascending_0_30000.csv  CountingSort_Descending_0_10000000.csv  CountingSort_Descending_0_30000.csv  CountingSort_Random(10%)_0_10000000.csv  CountingSort_Random(10%)_0_30000.csv  CountingSort_Random(Big)_0_10000000.csv  CountingSort_Random(Big)_0_30000.csv  CountingSort_Random(Small)_0_10000000.csv  CountingSort_Random(Small)_0_30000.csv  InsertionSort(Sentinel)_Ascending_0_30000.csv  InsertionSort(Sentinel)_Descending_0_30000.csv  InsertionSort(Sentinel)_Random(10%)_0_30000.csv  InsertionSort(Sentinel)_Random(Big)_0_30000.csv  InsertionSort(Sentinel)_Random(Small)_0_30000.csv  InsertionSort_Ascending_0_30000.csv  (+58 more)
